# timeplus-messaging

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py
examples/: kafka_style.py  kafka_style_with_partition.py  queue_style.py
tests/: conftest.py  test_consumer.py  test_producer.py  test_record.py
timeplus_messaging/: __init__.py  admin.py  consumer.py  producer.py  record.py
